--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,6 +16,7 @@ rules:
   no-use-before-define: off
   react/react-in-jsx-scope: off
   react/jsx-props-no-spreading: off
+  jsx-a11y/media-has-caption: off
   indent:
     - 2
   react/jsx-indent:
